feat: Add ED data processing and improve hospital data processing

--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -127,8 +127,23 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "def to_clean_records(dataframe):\n",
+    "    return dataframe.apply(lambda row: row.dropna().to_dict(), axis=1).tolist()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "321450ea3c8d6841",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "subject_id = 10000032\n",
     "hadm_id = 29079034\n",
+    "# subject_id = 10005909\n",
+    "# hadm_id = 20199380\n",
     "\n",
     "query = text(\n",
     "    \"select * from mimiciv.mimiciv_hosp.admissions where subject_id = :subject and hadm_id = :hadm;\").bindparams(\n",
@@ -136,44 +151,78 @@
     "\n",
     "hospital_stay = pd.read_sql_query(query, engine)\n",
     "\n",
-    "cols_to_remove = [\n",
-    "    'subject_id', 'hadm_id', 'seq_num', 'emar_id', 'emar_seq', 'pharmacy_id', 'enter_provider_id', 'labevent_id',\n",
-    "    'order_provider_id', 'value_num',\n",
-    "    'admit_provider_id', 'storetime'\n",
+    "tables_to_ignore = [\n",
+    "    'admissions',\n",
+    "    'drgcodes',\n",
+    "    'emar',\n",
+    "    'hcpcsevents',\n",
+    "    'pharmacy'\n",
     "]\n",
     "\n",
-    "for k, v in database_structure['mimiciv_hosp'].items():\n",
+    "hosp_cols_to_remove = [\n",
+    "    'subject_id', 'hadm_id', 'seq_num', 'emar_id', 'emar_seq', 'pharmacy_id', 'enter_provider_id', 'labevent_id',\n",
+    "    'order_provider_id',\n",
+    "    'admit_provider_id', 'storetime',\n",
+    "    'insurance', 'edregtime', 'edouttime',\n",
+    "    'anchor_year_group', 'hospital_expire_flag',\n",
+    "    'specimen_id', 'status', 'entertime', 'verifiedtime', 'expiration_value', 'expiration_unit', 'expiration_date', \n",
+    "    'order_status',\n",
+    "    'gsn', 'ndc', 'formulary_drug_cd', 'poe_seq',\n",
+    "    'microevent_id', 'micro_specimen_id', 'spec_itemid', 'test_seq', 'test_itemid',\n",
+    "]\n",
+    "\n",
+    "for column, v in database_structure['mimiciv_hosp'].items():\n",
     "    if 'hadm_id' in v:\n",
-    "        if k == 'admissions':\n",
+    "        if column in tables_to_ignore:\n",
     "            continue\n",
     "\n",
-    "        print(k)\n",
-    "        sql_query = text(f\"select * from mimiciv.mimiciv_hosp.{k} where hadm_id = :hadm_id\").bindparams(hadm_id=hadm_id)\n",
-    "        sql_df = pd.read_sql(sql_query, engine).drop('subject_id', axis=1, errors='ignore')\n",
+    "        print(column)\n",
+    "        sql_query = text(f\"select * from mimiciv.mimiciv_hosp.{column} where hadm_id = :hadm_id\").bindparams(hadm_id=hadm_id)\n",
+    "        sql_df = pd.read_sql(sql_query, engine)\n",
+    "        removed_cols = [col for col in hosp_cols_to_remove if col in sql_df.columns]\n",
+    "        sql_df = sql_df.drop(removed_cols, axis=1, errors='ignore')\n",
     "\n",
-    "        # if more than one row, convert to list of dictionaries\n",
-    "        if len(sql_df) > 1:\n",
-    "            removed_cols = [col for col in cols_to_remove if col in sql_df.columns]\n",
-    "            sql_df = sql_df.drop(removed_cols, axis=1, errors='ignore')\n",
-    "            sql_df = sql_df.to_dict('records')\n",
+    "        if isinstance(sql_df, pd.DataFrame):\n",
+    "            sql_df = to_clean_records(sql_df)\n",
     "\n",
-    "            # add to df2 as a single cell in new column\n",
-    "            hospital_stay[k] = [sql_df]\n",
-    "        else:\n",
-    "            # Prefix column with table name\n",
-    "            sql_df = sql_df.rename(columns=lambda x: f\"{k}_{x}\" if x != 'hadm_id' else x)\n",
-    "            hospital_stay = hospital_stay.merge(sql_df, on='hadm_id', how='outer')\n",
-    "\n",
+    "        hospital_stay[column] = [sql_df]\n",
+    "        \n",
     "hospital_stay = hospital_stay.drop(\n",
-    "    [col for col in cols_to_remove if col in hospital_stay.columns],\n",
-    "    axis=1,\n",
-    "    errors='ignore',\n",
+    "    [col for col in hosp_cols_to_remove if col in hospital_stay.columns], axis=1, errors='ignore'\n",
     ")"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "9eb7e35527699ac5",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# additional tables from subject id\n",
+    "additional_patient_tables = [\n",
+    "    'omr',\n",
+    "    'patients'\n",
+    "]\n",
+    "\n",
+    "for table in additional_patient_tables:\n",
+    "    print(table)\n",
+    "    sql_query = text(f\"select * from mimiciv.mimiciv_hosp.{table} where subject_id = :subject_id\").bindparams(subject_id=subject_id)\n",
+    "    sql_df = pd.read_sql(sql_query, engine)\n",
+    "    removed_cols = [col for col in hosp_cols_to_remove if col in sql_df.columns]\n",
+    "    sql_df = sql_df.drop(removed_cols, axis=1, errors='ignore')\n",
+    "\n",
+    "    if isinstance(sql_df, pd.DataFrame):\n",
+    "        sql_df = to_clean_records(sql_df)\n",
+    "\n",
+    "    hospital_stay[table] = [sql_df]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "595ce2b741a097a8",
    "execution_count": null
   },
   {
@@ -200,7 +249,32 @@
     "    \"\"\"\n",
     "\n",
     "    # Execute the query\n",
-    "    return pd.read_sql(sql_query, engine)['long_title'].tolist()"
+    "    return pd.read_sql(sql_query, engine)['long_title'].tolist()\n",
+    "\n",
+    "def convert_lab_id_to_info(labs):\n",
+    "    # Prepare a CASE statement for ordering\n",
+    "    case_statement = \"CASE \"\n",
+    "    for index, item in enumerate(labs):\n",
+    "        id = item['itemid']\n",
+    "        case_statement += f\"WHEN itemid = {id} THEN {index} \"\n",
+    "\n",
+    "    case_statement += \"END\"\n",
+    "\n",
+    "    # Create a WHERE IN clause\n",
+    "    lab_conditions = \", \".join([str(item['itemid']) for item in labs])\n",
+    "    sql_query = f\"\"\"\n",
+    "    SELECT *\n",
+    "    FROM mimiciv.mimiciv_hosp.d_labitems\n",
+    "    WHERE itemid IN ({lab_conditions})\n",
+    "    ORDER BY {case_statement};\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Execute the query\n",
+    "    returned = pd.read_sql(sql_query, engine)\n",
+    "    \n",
+    "    original = pd.DataFrame.from_dict(labs)\n",
+    "    \n",
+    "    return to_clean_records(original.merge(returned, on='itemid', how='outer').drop('itemid', axis=1).sort_values(by=['charttime']))"
    ],
    "metadata": {
     "collapsed": false
@@ -212,20 +286,94 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "if 'diagnoses_icd' in hospital_stay.columns:\n",
-    "    ordered_diagnoses = convert_icd_to_text(hospital_stay['diagnoses_icd'][0], 'diagnoses')\n",
-    "    hospital_stay['diagnoses_icd'] = [ordered_diagnoses]\n",
-    "    hospital_stay = hospital_stay.rename(columns={'diagnoses_icd': 'prioritized_diagnoses'})\n",
+    "# post processing\n",
     "\n",
-    "if 'procedures_icd' in hospital_stay.columns:\n",
-    "    ordered_procedures = convert_icd_to_text(hospital_stay['procedures_icd'][0], 'procedures')\n",
-    "    hospital_stay['procedures_icd'] = [ordered_procedures]\n",
-    "    hospital_stay = hospital_stay.rename(columns={'procedures_icd': 'prioritized_procedures'})"
+    "for column in hospital_stay.columns:\n",
+    "    print(column)\n",
+    "    match column:\n",
+    "        case 'diagnoses_icd':\n",
+    "            if len(hospital_stay[column][0]) > 0:\n",
+    "                ordered_diagnoses = convert_icd_to_text(hospital_stay[column][0], 'diagnoses')\n",
+    "                hospital_stay[column] = [ordered_diagnoses]\n",
+    "        case 'labevents':\n",
+    "            hospital_stay[column] = [convert_lab_id_to_info(hospital_stay[column][0])]\n",
+    "        case 'procedures_icd':\n",
+    "            if len(hospital_stay[column][0]) > 0:\n",
+    "                ordered_procedures = convert_icd_to_text(hospital_stay[column][0], 'procedures')\n",
+    "                for name, d in zip(ordered_procedures, hospital_stay[column][0]):\n",
+    "                    d['title'] = name\n",
+    "                    \n",
+    "                procedures_df = pd.DataFrame(hospital_stay[column][0])\n",
+    "                procedures_df = procedures_df.drop(['icd_code', 'icd_version'], axis=1).sort_values(by=['chartdate'])\n",
+    "                hospital_stay[column] = [to_clean_records(procedures_df)]\n",
+    "        case 'prescriptions':\n",
+    "            poe_df = pd.DataFrame(hospital_stay['poe'][0])\n",
+    "            prescriptions_df = pd.DataFrame(hospital_stay['prescriptions'][0])\n",
+    "        \n",
+    "            # Get all the prescriptions that have a non-null value in the `poe_id` column\n",
+    "            poe_prescriptions = prescriptions_df[prescriptions_df['poe_id'].notnull()]\n",
+    "            poe_prescriptions = poe_prescriptions.merge(poe_df, on='poe_id', how='outer')\n",
+    "            \n",
+    "            # if a row in poe_prescriptions has both a starttime and an ordertime, set ordertime as null\n",
+    "            poe_prescriptions.loc[(poe_prescriptions['starttime'].notnull()) & (poe_prescriptions['ordertime'].notnull()), 'ordertime'] = None\n",
+    "            \n",
+    "            poe_prescriptions['temp'] = poe_prescriptions['starttime'].combine_first(poe_prescriptions['ordertime'])\n",
+    "            \n",
+    "            poe_prescriptions = poe_prescriptions.sort_values(by=['temp'])\n",
+    "            poe_prescriptions = poe_prescriptions.drop('temp', axis=1)\n",
+    "        \n",
+    "            # Get all the prescriptions that have a null value in the `poe_id` column\n",
+    "            non_poe_prescriptions = prescriptions_df[prescriptions_df['poe_id'].isnull()]\n",
+    "        \n",
+    "            hospital_stay['poe'] = [to_clean_records(poe_prescriptions)]\n",
+    "        \n",
+    "            if len(non_poe_prescriptions) > 0:\n",
+    "                hospital_stay['prescriptions'] = [to_clean_records(non_poe_prescriptions.sort_values())]\n",
+    "            else:\n",
+    "                hospital_stay['prescriptions'] = [[]]\n",
+    "        case 'poe':\n",
+    "            poe_df = pd.DataFrame(hospital_stay['poe'][0])\n",
+    "            poe_df = poe_df[(poe_df['order_type'] != 'ADT orders') & (poe_df['order_type'] != 'Lab')]\n",
+    "            \n",
+    "            hospital_stay['poe'] = [to_clean_records(poe_df)]\n",
+    "        case 'microbiologyevents':\n",
+    "            micro_df = pd.DataFrame(hospital_stay[column][0])\n",
+    "            micro_df = micro_df.drop('chartdate', axis=1)\n",
+    "            hospital_stay[column] = [to_clean_records(micro_df)]"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "e569fe1a344b5929",
+   "id": "8fe8ea24ef2d5916",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# rename columns to be more readable\n",
+    "hospital_stay = hospital_stay.rename(columns={\n",
+    "    'admittime': 'admission time',\n",
+    "    'dischtime': 'discharge time',\n",
+    "    'deathtime': 'death time',\n",
+    "    'admission_type': 'admission type',\n",
+    "    'admission_location': 'admission location',\n",
+    "    'discharge_location': 'discharge location',\n",
+    "    'marital_status': 'marital status',\n",
+    "    'diagnoses_icd': 'diagnoses',\n",
+    "    'labevents': 'lab tests',\n",
+    "    'microbiologyevents': 'microbiology tests',\n",
+    "    'poe': 'provider orders',\n",
+    "    'procedures_icd': 'procedures',\n",
+    "    'services': 'hospital services',\n",
+    "    'omr': 'other patient information',\n",
+    "    'patients': 'patient information'\n",
+    "})"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "574c9df058013d47",
    "execution_count": null
   },
   {
@@ -246,40 +394,87 @@
    "source": [
     "ed_stay_query = text(\"select * from mimiciv.mimiciv_ed.edstays where hadm_id = :hadm_id\").bindparams(hadm_id=hadm_id)\n",
     "\n",
+    "# stay_id = 32522732\n",
+    "# ed_stay_query = text(\"select * from mimiciv.mimiciv_ed.edstays where stay_id = :stay_id\").bindparams(stay_id=stay_id)\n",
+    "\n",
     "ed_stay_df = pd.read_sql(ed_stay_query, engine)\n",
     "\n",
     "ed_stays = []\n",
+    "\n",
+    "ed_cols_to_remove = [\n",
+    "    'subject_id',\n",
+    "    'stay_id',\n",
+    "    'seq_num',\n",
+    "    'icd_code',\n",
+    "    'icd_version',\n",
+    "    'gsn',\n",
+    "    'ndc',\n",
+    "    'etc_rn',\n",
+    "    'etccode',\n",
+    "    'med_rn',\n",
+    "    'gsn',\n",
+    "    'gsn_rn'\n",
+    "]\n",
     "\n",
     "for row in ed_stay_df.iterrows():\n",
     "    row_info = pd.DataFrame(row[1]).transpose()\n",
     "    stay_id = row_info['stay_id'].values[0]\n",
     "\n",
-    "    for k, v in database_structure['mimiciv_ed'].items():\n",
-    "        if 'stay_id' in v:\n",
-    "            if k == 'edstays':\n",
+    "    for column, value in database_structure['mimiciv_ed'].items():\n",
+    "        if 'stay_id' in value:\n",
+    "            if column == 'edstays':\n",
     "                continue\n",
     "\n",
-    "            print(k)\n",
-    "            sql_query = text(f\"select * from mimiciv.mimiciv_ed.{k} where stay_id = :stay_id\").bindparams(\n",
+    "            print(column)\n",
+    "            sql_query = text(f\"select * from mimiciv.mimiciv_ed.{column} where stay_id = :stay_id\").bindparams(\n",
     "                stay_id=stay_id)\n",
-    "            sql_df = pd.read_sql(sql_query, engine).drop('subject_id', axis=1, errors='ignore')\n",
+    "            sql_df = pd.read_sql(sql_query, engine)\n",
+    "            \n",
+    "            removed_cols = [col for col in ed_cols_to_remove if col in sql_df.columns]\n",
+    "            sql_df = sql_df.drop(removed_cols, axis=1, errors='ignore')\n",
+    "            \n",
+    "            match column:\n",
+    "                case 'diagnosis':\n",
+    "                    # convert to a list of icd_title column\n",
+    "                    sql_df = sql_df['icd_title'].tolist()\n",
+    "                case 'medrecon':\n",
+    "                    sql_df = sql_df.drop('charttime', axis=1, errors='ignore')\n",
+    "                    sql_df = sql_df.rename(columns={'etcdescription': 'enhanced therapeutic class'})\n",
+    "                case 'pyxis':\n",
+    "                    # remove duplicate rows if `name` AND `charttime` are the same\n",
+    "                    sql_df = sql_df.drop_duplicates(subset=['name', 'charttime']) \n",
+    "            \n",
+    "            if isinstance(sql_df, pd.DataFrame):\n",
+    "                sql_df = to_clean_records(sql_df)\n",
     "\n",
-    "            # Prefix column with table name\n",
-    "            sql_df = sql_df.rename(columns=lambda x: f\"{k}_{x}\" if x != 'stay_id' else x)\n",
-    "\n",
-    "            # if more than one row, convert to list of dictionaries\n",
-    "            if len(sql_df) > 1:\n",
-    "                sql_df = sql_df.drop('stay_id', axis=1, errors='ignore')\n",
-    "                sql_df = sql_df.to_dict('records')\n",
-    "\n",
-    "                # add to df2 as a single cell in new column\n",
-    "                row_info[k] = [sql_df]\n",
-    "            else:\n",
-    "                row_info = row_info.merge(sql_df, on='stay_id', how='outer')\n",
-    "\n",
+    "            row_info[column] = [sql_df]\n",
     "    ed_stays.append(row_info)\n",
     "\n",
-    "ed_stays = pd.concat(ed_stays, ignore_index=True)"
+    "ed_stays = pd.concat(ed_stays, ignore_index=True)\n",
+    "\n",
+    "# rename columns to be more readable\n",
+    "ed_stays = ed_stays.rename(columns={\n",
+    "    'intime': 'arrival time',\n",
+    "    'outtime': 'exit time',\n",
+    "    'arrival_transport': 'arrival transport',\n",
+    "    'medrecon': 'medication reconciliation',\n",
+    "    'pyxis': 'dispensed medications',\n",
+    "    'vitalsign': 'vital signs'\n",
+    "})\n",
+    "\n",
+    "\n",
+    "# reorder columns\n",
+    "ed_stays = ed_stays[[\n",
+    "    'subject_id', 'hadm_id', 'stay_id',\n",
+    "    'race', 'gender',\n",
+    "    'arrival time', 'arrival transport',\n",
+    "    'triage',\n",
+    "    'vital signs',\n",
+    "    'medication reconciliation',\n",
+    "    'dispensed medications',\n",
+    "    'exit time', 'disposition',\n",
+    "    'diagnosis'\n",
+    "]]"
    ],
    "metadata": {
     "collapsed": false
@@ -329,7 +524,7 @@
     "            # if more than one row, convert to list of dictionaries\n",
     "            if len(sql_df) > 1:\n",
     "                sql_df = sql_df.drop('stay_id', axis=1, errors='ignore')\n",
-    "                sql_df = sql_df.to_dict('records')\n",
+    "                sql_df = to_clean_records(sql_df)\n",
     "\n",
     "                # add to df2 as a single cell in new column\n",
     "                row_info[k] = [sql_df]\n",
@@ -416,21 +611,23 @@
     "\n",
     "            value = row[1][column]\n",
     "\n",
-    "            if isinstance(value, list):\n",
+    "            if isinstance(value, list) and len(value) > 0:\n",
     "                output += f\"{column}:\\n\"\n",
     "\n",
     "                if isinstance(value[0], dict):\n",
     "                    for i, dictionary in enumerate(value):\n",
     "                        output += f\" - {i + 1} of {len(value)}\\n\"\n",
     "                        for k, v in dictionary.items():\n",
-    "                            if str(v).lower() not in ['none', 'nan']:\n",
+    "                            if str(v).lower() not in ['none', 'nan', 'nat']:\n",
     "                                output += f\"   - {k}: {v}\\n\"\n",
     "                else:\n",
     "                    for v in value:\n",
-    "                        if str(v).lower() not in ['none', 'nan']:\n",
+    "                        if str(v).lower() not in ['none', 'nan', 'nat']:\n",
     "                            output += f\" - {v}\\n\"\n",
-    "            elif str(value).lower() not in ['none', 'nan']:\n",
+    "            elif not isinstance(value, list) and str(value).lower() not in ['none', 'nan', 'nat']:\n",
     "                output += f\"{column}: {value}\\n\"\n",
+    "                \n",
+    "        output += \"\\n\"\n",
     "\n",
     "    return output\n",
     "\n",
@@ -448,7 +645,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "format_df_to_text(hospital_stay)"
+    "format_df_to_text(ed_stays)"
    ],
    "metadata": {
     "collapsed": false
@@ -459,11 +656,24 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "format_df_to_text(hospital_stay)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "42240a2f2c28c618",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "b5f19d0386617f32"
+   "id": "f9af683a5c612cca",
+   "execution_count": null
   }
  ],
  "metadata": {
